# scpz

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md  demo.txt  mkdocs.yml  pyproject.toml
.claude/skills/bump-release/: SKILL.md
.github/: CODEOWNERS  DEV_AI.md  PAGES_SETUP.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/docs/: pages-setup.md
.github/rulesets/: dev-ai-copilot-integration.json
.github/workflows/: ci.yml  pages.yml  publish.yml  update-catalog.yml
docs/: agents.md  changelog.md  claude-skill.md  contributing.md  index.md  pages-setup.md  user-guide.md
docs/stylesheets/: extra.css
examples/: bloated_deny.json  data_protection.json  region_lockdown.json  scpeasy.yaml  scpz.yaml  security_guardrails.json
schema/: OptimizerConfig.json
scripts/: apply_dev_ai_ruleset.sh  gen_demo.py  update_catalog.py
src/scpeasy/: __init__.py  catalog.py  cli.py  config.py  constants.py  models.py  optimizer.py  splitter.py  validator.py
src/scpeasy/data/: aws_actions.json
src/scpeasy/optimizations/: __init__.py  actions.py  conditions.py  redundancy.py  resources.py  statements.py
src/scpz/: __init__.py  catalog.py  cli.py  config.py  constants.py  equivalence.py  machine_output.py  models.py  optimizer.py  splitter.py  validator.py
src/scpz/optimizations/: actions.py  conditions.py  minify.py  redundancy.py  resources.py  statements.py
tests/: conftest.py  test_actions.py  test_catalog.py  test_cli.py  test_conditions.py  test_config.py  test_equivalence.py  test_golden_regression.py  test_machine_output.py  test_minify.py  test_optimizer.py  test_redundancy.py  test_resources.py  test_splitter.py  test_statements.py  test_validator.py
tests/fixtures/: complex_multi.json  mergeable_statements.json  not_action_allowlist.json  oversized.json  oversized_not_action_deny.json  simple_deny.json
