[project]
name = "scpz"
version = "0.2.3"
description = "Intelligently optimize AWS SCP JSONs to adhere to strict size, statement, and policy count limits."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tyler Johnson", email = "tsjnsn@gmail.com" }
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/tsjnsn/scpz"
Repository = "https://github.com/tsjnsn/scpz"
Issues = "https://github.com/tsjnsn/scpz/issues"
Changelog = "https://github.com/tsjnsn/scpz/blob/main/CHANGELOG.md"

[project.scripts]
scpz = "scpz.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
    "types-PyYAML>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "PT",    # flake8-pytest-style
    "ERA",   # eradicate (commented-out code)
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "ANN",   # flake8-annotations
    "C4",    # flake8-comprehensions
    "RET",   # flake8-return
]
ignore = [
    "ANN401",  # dynamically typed expressions (Any)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "T20"]
"src/scpz/cli.py" = ["B008"]  # typer uses function calls as defaults
"src/scpz/config.py" = ["N815"]  # camelCase field names match the YAML config schema
"scripts/**" = ["T20", "ANN"]   # standalone scripts may use print()

[tool.ruff.lint.isort]
known-first-party = ["scpz"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

